# deskflow-api

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile.local  EDITOR_CONDICOES_GUIA.md  FLOW_BUILDER_README.md  FLOW_CONTEXT_ISOLATION.md  GUIA_CONDICOES.md  INICIO_RAPIDO.md  MIGRACAO_FLUXO.md  README.md  ROUTER_NODE_GUIDE.md  TASKS.md  add_execute_children_check.py  add_flow_id_to_contexts.sql  apply_execute_children_logic.py  docker-compose-local.yml  docker-compose.yml  fix_contexts_flow_id.sql  fix_conversation_context_calls.py  fix_executors.py  fix_text_propagation.py  package-lock.json  pyproject.toml  setup.cfg
.github/workflows/: ci-common.yml  ci-dev.yml  ci-prod.yml
deploy/: gunicorn.conf.py
deploy/database/: 00__create_database.sql  01__schema.sql  02__flows_schema.sql  03__add_flow_id_to_contexts.sql  04__add_secrets_to_flows.sql
deploy/docker/: Dockerfile  Dockerfile.local  docker-compose.yml  service-stack.yml
deploy/terraform/: outputs.tf  terraform.tf  terraform.tfstate  terraform.tfstate.backup  terraform.yaml  variables.tf
public/: index.html
public/assets/: index-Cpp2_stv.css  index-DlyTvwEB.js
scripts/: create_uchoa_flow.py  get_chats_from_date.py  migrate_flow_to_builder.py  run-app.sh  run-tests.sh
scripts/common/: prometheus.sh
src/danubio_bot/: activity.py  app.py  automatic_message.py  celery.py  common.py  config.py  context.py  conversation.py  conversation_timer.py  dbms.py  flow_interpreter.py  message_worker.py  optout.py  sender_worker.py  service.py  settings.py
src/deskflow/: activity.py  app.py  (+13 more)
tests/: conftest.py
(+46 files in other folders)
