[metadata]
name = deskflowototsion = 0.1

[options]
packages = find:
package_dir =
    =src
install_requires =
    Flask==2.2.2
    Flask-SQLAlchemy==3.0.3
    Flask-Cors==3.0.10
    requests==2.31.0
    marshmallow==3.13.0
    google-auth==2.0.2
    ratelimit==2.2.1
    google-cloud-pubsub==2.8.0
    SQLAlchemy-Enum34==2.0.0
    structlog==23.1.0
    prometheus-client==0.11.0
    Werkzeug==2.2.2
    prometheus-flask-exporter==0.21.0
    pytest-flask==1.2.0
    psycopg2-binary==2.9.5
    pykka==3.1.1
    litequeue==0.6
    boto==2.49.0
    pytz==2024.1
    tenacity==8.2.2
    Flask-RQ2==18.3
    marshmallow==3.13.0
    pika==1.3.2
    openai>=1.0.0
    celery==5.4.0
    ratelimit==2.2.1
    Unidecode==1.3.6
    cpf-cnpj-validate==1.4
    python-dotenv==1.0.0
    PyJWT==2.8.0
    litellm

[options.packages.find]
where = src

[flake8]
ignore = E501,W503
